<resources>
    <string name="app_name">Venda Bem</string>
    <string name="home_start">Olá seja Bem vindo!!!</string>
    <string name="app_name_show">Venda Bem</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="create_your_account">Crie sua conta</string>
    <string name="login_in_your_account">Entre na sua conta</string>
    <string name="login_name">CPF</string>
    <string name="login_password">Senha</string>
    <string name="login_bt_login">Entrar</string>
    <string name="not_account_yet">Não tem uma conta? clique aqui</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="login_terms_of_use">Termos de uso</string>

    <string name="menu_start">Início</string>
    <string name="menu_customers">Clientes</string>
    <string name="menu_sales">Vendas</string>
    <string name="menu_reports">Relatórios</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_exit">Sair</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_version">Versão</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>