<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_start"
            android:title="@string/menu_start" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_menu_customers"
            android:title="@string/menu_customers" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_menu_sales"
            android:title="@string/menu_sales" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_reports"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />

    </group>
</menu>