<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.resellwell.activity.dashboard.ui.home.HomeFragment"
        android:label="@string/menu_start"
        tools:layout="@layout/fragment_home" />

<!--    <fragment-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="com.example.resellwell.activity.dashboard.ui.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_gallery"-->
<!--        tools:layout="@layout/fragment_gallery" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_slideshow"-->
<!--        android:name="com.example.resellwell.activity.dashboard.ui.slideshow.SlideshowFragment"-->
<!--        android:label="@string/menu_slideshow"-->
<!--        tools:layout="@layout/fragment_slideshow" />-->

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.resellwell.activity.dashboard.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_customers"
        android:name="com.example.resellwell.activity.dashboard.ui.customer.CustomerFragment"
        android:label="@string/menu_customers"
        tools:layout="@layout/fragment_customer" />

    <fragment
        android:id="@+id/nav_sales"
        android:name="com.example.resellwell.activity.dashboard.ui.sales.SalesFragment"
        android:label="@string/menu_sales"
        tools:layout="@layout/fragment_sales" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.resellwell.activity.dashboard.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />
</navigation>